working on assignment

--- a/webkehitys/tehtava5/index.html
+++ b/webkehitys/tehtava5/index.html
@@ -9,14 +9,23 @@
         <meta name="keywords" content="html tutorial template">
     </head>
     <body>
+        <img id="logo" src="logo.png"/>
         <div id="container">
             <div id="innercontainer">
                 <div id="header"> 
-                    <p>Derped</p>
+                    <p id="headertext">Riihimäki on tekniikan kampus!</p>
                 </div>
-                <div id="">
+                <div id="subheader">
+                    <p id="subheadtext">Tulevaisuuden tekniikan soveltaja</p>
                 </div>
-                <div></div>
+                <div id="bodycont">
+                    <div id="infocont">
+                        <img src="kone.jpg"/>
+                    </div>
+                    <div id="separator"></div>
+                    <div id="engineercont">
+                    </div>
+                </div>
             </div>
         </div>
     </body>
