--- a/webkehitys/tehtava5/index.html
+++ b/webkehitys/tehtava5/index.html
@@ -21,22 +21,23 @@
                 <div id="bodycont">
                     <div id="infocont">
                         <img id="kone" src="kone.jpg"/>
+                        <p id="sometext">HAMKin tieto- ja viestintätekniikan opiskelijana opit, miten käytät, suunnittelet ja toteutat erilaisia tietotekniikkaan pohjautuvia järjestelmiä. Opintosi painottuvat ohjelmistojen, laitteistojen, verkon, tietoliikenteen ja mediateknologian osaamiseen</p>
                     </div>
                     <div id="separator"></div>
-                        <div id=engcont1>
-                            <ul>
-                                <li>Suunnitteluinsinööri</li>
-                                <li>Suunnitteluinsinööri</li>
-                                <li>Suunnitteluinsinööri</li>
-                            </ul>
-                        </div>
-                        <div id=engcont2>
-                            <ul>
-                                <li>Suunnitteluinsinööri</li>
-                                <li>Suunnitteluinsinööri</li>
-                                <li>Suunnitteluinsinööri</li>
-                            </ul>
-                        </div>
+                    <div id=engcont1>
+                        <ul class="engineerlist">
+                            <li>Suunnitteluinsinööri</li>
+                            <li>Suunnitteluinsinööri</li>
+                            <li>Suunnitteluinsinööri</li>
+                        </ul>
+                    </div>
+                    <div id=engcont2>
+                        <ul class="engineerlist">
+                            <li>Suunnitteluinsinööri</li>
+                            <li>Suunnitteluinsinööri</li>
+                            <li>Suunnitteluinsinööri</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
