--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -13,21 +13,21 @@
 	</head>
 
 	<body>
-		<div id="container">
+		<div id="col-12 container">
 			<div id="header">
 			</div>
-			<div class="frame" id="infoframe">
-				<div id="factbox">
-					<div id="facttext">
-						<p id="factparagraph">BLABLA</p>
+			<div  class="infoframe col-4">
+				<div class="factbox col-4">
+					<div class="col-3 facttext">
+						<p id="factparagraph">BLALSLL ASDASD ASSASD  SSASAD  SSSDSD BLABLA</p>
 					</div>
-					<div id="btncontainer">
-						<button type="button" class="infoboxbtn" onclick="RandomFact()">Random</br>fact</button>
+					<div class="btncontainer col-12">
+						<button type="button" class="sitebuttons col-4" onclick="RandomFact()">Random<br>fact</button>
 					</div>
 				</div>
 			</div>
-			<div id="imgcontainer">
-				<div id="dummyimage"></div>
+			<div class="imgcontainer col-8">
+				<img class="images col-8" src="test.jpg"/>
 			</div>
 		</div>
 	</body>
