--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -3,38 +3,27 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>The HTML5 Herald</title>
 		<meta name="description" content="The HTML5 Herald">
 		<meta name="author" content="SitePoint">
-		<script src="index.js"></script>
-		<script src="facts.js"></script>
 		<link rel="stylesheet" href="index.css">
 	</head>
 
 	<body>
-		<div id="col-12 container">
-			<div id="header">
+		<header>
+			<div class="headertext container">
+				<h1>Witcher 3</h1>
 			</div>
-			<div  class="infoframe col-4">
-				<div class="factbox col-4">
-					<div class="col-3 facttext">
-						<p id="factparagraph">BLALSLL ASDASD ASSASD  SSASAD  SSSDSD BLABLA</p>
-					</div>
-					<div class="btncontainer col-12">
-						<button type="button" class="sitebuttons col-4" onclick="RandomFact()">Random<br>fact</button>
-					</div>
+		</header>
+		<section class="infosection">
+			<div class="container randominfo">
+				<div class="innercontainer" id="randomtextbox">
+					<p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
 				</div>
+				<h2>Random fact generator</h2>
+				<p id="randomfact">BLABLBAAAA</p>
+				<button>Sometext</button>
 			</div>
-			<div class="imgcontainer col-8">
-				<img class="images col-8" src="test.jpg"/>
-			</div>
-		</div>
+		</section>
 	</body>
 </html>
-
-
-
-
-
-
