--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -1,29 +1,36 @@
 <!doctype html>
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>The HTML5 Herald</title>
-		<meta name="description" content="The HTML5 Herald">
-		<meta name="author" content="SitePoint">
-		<link rel="stylesheet" href="index.css">
-	</head>
+    <head>
+        <meta charset="utf-8">
+        <title>The HTML5 Herald</title>
+        <meta name="description" content="The HTML5 Herald">
+        <meta name="author" content="SitePoint">
+        <link rel="stylesheet" href="index.css">
+    </head>
 
-	<body>
-		<header>
-			<div class="headertext container">
-				<h1>Witcher 3</h1>
-			</div>
-		</header>
-		<section class="infosection">
-			<div class="container randominfo">
-				<div class="innercontainer" id="randomtextbox">
-					<p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
-				</div>
-				<h2>Random fact generator</h2>
-				<p id="randomfact">BLABLBAAAA</p>
-				<button>Sometext</button>
-			</div>
-		</section>
-	</body>
+    <body>
+        <header>
+            <div class="headertext container">
+                <h1>Witcher 3</h1>
+            </div>
+        </header>
+        <section class="infosection">
+            <div class="container randominfo">
+                <div class="innercontainer" id="randomtextbox">
+                    <p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
+                </div>
+                <h2>Random fact generator</h2>
+                <p id="randomfact">BLABLBAAAA</p>
+                <button class="btn randomfactgenerator">Sometext</button>
+            </div>
+            <div class="container">
+                <div class="imgcontainer">
+                    <img id="slideshow" src="img\test.jpg"></img>
+                    <button class="btn" onclick="previousimg()">Previous</button>
+                    <button class="btn" onclick="nextimg()">Next</button>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
