--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="The HTML5 Herald">
         <meta name="author" content="SitePoint">
         <link rel="stylesheet" href="index.css">
+        <script src="index.js" type="text/javascript"></script>
     </head>
 
     <body>
