--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="The HTML5 Herald">
         <meta name="author" content="SitePoint">
         <link rel="stylesheet" href="index.css">
-        <script src="index.js" type="text/javascript"></script>
+        <script src="index.js"type="text/javascript"></script>
     </head>
 
     <body>
@@ -17,7 +17,7 @@
             </div>
         </header>
         <section class="infosection">
-            <div class="container randominfo">
+            <div class="container randominfo col-4">
                 <div class="innercontainer" id="randomtextbox">
                     <p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
                 </div>
@@ -25,13 +25,11 @@
                 <p id="randomfact">BLABLBAAAA</p>
                 <button class="btn randomfactgenerator">Sometext</button>
             </div>
-            <div class="container">
-                <div class="imgcontainer">
+                <div class="imgcontainer col-4">
                     <img id="slideshow" src="img\test.jpg"></img>
                     <button class="btn" onclick="previousimg()">Previous</button>
                     <button class="btn" onclick="nextimg()">Next</button>
                 </div>
-            </div>
         </section>
     </body>
 </html>
