--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -16,20 +16,26 @@
                 <h1>Witcher 3</h1>
             </div>
         </header>
-        <section class="infosection">
-            <div class="container randominfo col-4">
-                <div class="innercontainer" id="randomtextbox">
-                    <p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
-                </div>
-                <h2>Random fact generator</h2>
-                <p id="randomfact">BLABLBAAAA</p>
-                <button class="btn randomfactgenerator">Sometext</button>
+        <ul class="navbar">
+            <li><a href="">Home</a></li>
+            <li><a href="">Login</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+        <div class="col-3 randominfo">
+            <h2>Random fact generator</h2>
+            <div class="innercontainer col-12" id="randomtextbox">
+                <p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
             </div>
-                <div class="imgcontainer col-4">
-                    <img id="slideshow" src="img\test.jpg"></img>
-                    <button class="btn" onclick="previousimg()">Previous</button>
-                    <button class="btn" onclick="nextimg()">Next</button>
-                </div>
-        </section>
+            <p id="randomfact">BLABLBAAAA</p>
+            <button class="btn randomfactgenerator">Sometext</button>
+
+        </div>
+        <div class="col-6 imgcontainer">
+            <img id="slideshow" src="img\test.jpg"></img>
+            <button class="btn" onclick="previousimg()">Previous</button>
+            <button class="btn" onclick="nextimg()">Next</button>
+        </div>
+        <div></div>
     </body>
 </html>
