--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -29,13 +29,27 @@
             </div>
             <p id="randomfact">BLABLBAAAA</p>
             <button class="btn randomfactgenerator">Sometext</button>
-
         </div>
         <div class="col-6 imgcontainer">
             <img id="slideshow" src="img\test.jpg"></img>
             <button class="btn" onclick="previousimg()">Previous</button>
             <button class="btn" onclick="nextimg()">Next</button>
         </div>
-        <div></div>
+        <div class="col-3 leaderboard">
+            <h2>Gwent leaderboard</h2>
+            <ol class="gwentboard">
+                <li>Geralt of Rivia</li>
+                <li>Dijkstra</li>
+                <li>Cirilla</li>
+                <li>Gaunter O'Dimm</li>
+                <li>Red Baron</li>
+                <li>Vesemir</li>
+                <li>Yennefer if Vengerberg</li>
+                <li>Emhyr var Emreis</li>
+                <li>Triss Merigold</li>
+                <li>Vernon Roche</li>
+            </ol>
+
+        </div>
     </body>
 </html>
