--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -32,8 +32,10 @@
         </div>
         <div class="col-6 imgcontainer">
             <img id="slideshow" src="img\test.jpg"></img>
-            <button class="btn" onclick="previousimg()">Previous</button>
-            <button class="btn" onclick="nextimg()">Next</button>
+            <div class="buttons">
+                <button class="btn" onclick="previousimg()">Previous</button>
+                <button class="btn" onclick="nextimg()">Next</button>
+            </div>
         </div>
         <div class="col-3 leaderboard">
             <h2>Gwent leaderboard</h2>
@@ -44,7 +46,7 @@
                 <li>Gaunter O'Dimm</li>
                 <li>Red Baron</li>
                 <li>Vesemir</li>
-                <li>Yennefer if Vengerberg</li>
+                <li>Yennefer of Vengerberg</li>
                 <li>Emhyr var Emreis</li>
                 <li>Triss Merigold</li>
                 <li>Vernon Roche</li>
