--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -11,47 +11,53 @@
     </head>
 
     <body>
-        <header>
-            <div class="headertext container">
-                <h1>Witcher 3</h1>
+        <div class="mainpage">
+            <div class="content">
+                <header>
+                    <div class="headertext container">
+                        <h1>Witcher 3</h1>
+                    </div>
+                </header>
+                <ul class="navbar">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Login</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+                <div class="col-3 randominfo">
+                    <h2>Random fact generator</h2>
+                    <div class="innercontainer col-12" id="randomtextbox">
+                        <p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
+                    </div>
+                    <p id="randomfact">BLABLBAAAA</p>
+                    <button class="btn randomfactgenerator">Sometext</button>
+                </div>
+                <div class="col-6 imgcontainer">
+                    <img id="slideshow" src="img\test.jpg"></img>
+                    <div class="buttons">
+                        <button class="btn" onclick="previousimg()">Previous</button>
+                        <button class="btn" onclick="nextimg()">Next</button>
+                    </div>
+                </div>
+                <div class="col-3 leaderboard">
+                    <h2>Gwent leaderboard</h2>
+                    <ol class="gwentboard">
+                        <li>Geralt of Rivia</li>
+                        <li>Dijkstra</li>
+                        <li>Cirilla</li>
+                        <li>Gaunter O'Dimm</li>
+                        <li>Red Baron</li>
+                        <li>Vesemir</li>
+                        <li>Yennefer of Vengerberg</li>
+                        <li>Emhyr var Emreis</li>
+                        <li>Triss Merigold</li>
+                        <li>Vernon Roche</li>
+                    </ol>
+                </div>
             </div>
-        </header>
-        <ul class="navbar">
-            <li><a href="">Home</a></li>
-            <li><a href="">Login</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-        <div class="col-3 randominfo">
-            <h2>Random fact generator</h2>
-            <div class="innercontainer col-12" id="randomtextbox">
-                <p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
-            </div>
-            <p id="randomfact">BLABLBAAAA</p>
-            <button class="btn randomfactgenerator">Sometext</button>
         </div>
-        <div class="col-6 imgcontainer">
-            <img id="slideshow" src="img\test.jpg"></img>
-            <div class="buttons">
-                <button class="btn" onclick="previousimg()">Previous</button>
-                <button class="btn" onclick="nextimg()">Next</button>
-            </div>
-        </div>
-        <div class="col-3 leaderboard">
-            <h2>Gwent leaderboard</h2>
-            <ol class="gwentboard">
-                <li>Geralt of Rivia</li>
-                <li>Dijkstra</li>
-                <li>Cirilla</li>
-                <li>Gaunter O'Dimm</li>
-                <li>Red Baron</li>
-                <li>Vesemir</li>
-                <li>Yennefer of Vengerberg</li>
-                <li>Emhyr var Emreis</li>
-                <li>Triss Merigold</li>
-                <li>Vernon Roche</li>
-            </ol>
-
-        </div>
+        <footer>
+            <p>HAMK kouluprojekti</p>
+        </footer>
     </body>
 </html>
