--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -27,7 +27,7 @@
                 <div class="col-3 randominfo">
                     <h2>Random fact generator</h2>
                     <div class="innercontainer col-12" id="randomtextbox">
-                        <p>BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
+                        <p id="randomtext">BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
                     </div>
                     <p id="randomfact">BLABLBAAAA</p>
                     <button class="btn randomfactgenerator">Sometext</button>
