--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="SitePoint">
         <link rel="stylesheet" href="index.css">
         <script src="index.js"type="text/javascript"></script>
+        <script src="facts.js"type="text/javascript"></script>
     </head>
 
     <body>
@@ -30,7 +31,7 @@
                         <p id="randomtext">BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
                     </div>
                     <p id="randomfact">BLABLBAAAA</p>
-                    <button class="btn randomfactgenerator">Sometext</button>
+                    <button class="btn randomfactgenerator" onclick="randomFact()">Sometext</button>
                 </div>
                 <div class="col-6 imgcontainer">
                     <img id="slideshow" src="img\test.jpg"></img>
