--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -22,16 +22,17 @@
                 <ul class="navbar">
                     <li><a href="">Home</a></li>
                     <li><a href="">Login</a></li>
+                    <li><a href="">Forum</a></li>
                     <li><a href="">About us</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
                 <div class="col-3 randominfo">
                     <h2>Random fact generator</h2>
                     <div class="innercontainer col-12" id="randomtextbox">
-                        <p id="randomtext">BLA SLLALDLA MMAKHDKJHS ASM;NMNDA UHSAKDJLHO KSKSKS HHHJS JDKA</p>
+                        <p id="randomtext"></p>
                     </div>
-                    <p id="randomfact">BLABLBAAAA</p>
-                    <button class="btn randomfactgenerator" onclick="randomFact()">Sometext</button>
+                    <p id="randomfact">Press to generate.</p>
+                    <button class="btn randomfactgenerator" onclick="randomFact()">Press</button>
                 </div>
                 <div class="col-6 imgcontainer">
                     <img id="slideshow" src="img\test.jpg"></img>
