inital commit on websiteproject

--- a/webkehitys/tehtava6/index.html
+++ b/webkehitys/tehtava6/index.html
@@ -26,22 +26,21 @@
                     <li><a href="">About us</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
-                <div class="col-3 randominfo">
+                <div class="col-2 randominfo">
                     <h2>Random fact generator</h2>
                     <div class="innercontainer col-12" id="randomtextbox">
                         <p id="randomtext"></p>
                     </div>
-                    <p id="randomfact">Press to generate.</p>
                     <button class="btn randomfactgenerator" onclick="randomFact()">Press</button>
                 </div>
-                <div class="col-6 imgcontainer">
-                    <img id="slideshow" src="img\test.jpg"></img>
+                <div class="col-8 imgcontainer">
+                    <img id="slideshow" src="img\Kuva1.jpg"></img>
                     <div class="buttons">
                         <button class="btn" onclick="previousimg()">Previous</button>
                         <button class="btn" onclick="nextimg()">Next</button>
                     </div>
                 </div>
-                <div class="col-3 leaderboard">
+                <div class="col-2 leaderboard">
                     <h2>Gwent leaderboard</h2>
                     <ol class="gwentboard">
                         <li>Geralt of Rivia</li>
