--- a/webkehitys/tehtava7/bandi.html
+++ b/webkehitys/tehtava7/bandi.html
@@ -1,84 +1,93 @@
 <!doctype html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">	
+	<head>
+		<meta charset="utf-8">	
 
-        <title>BellOne - Mainospalvelua</title>
-        <meta name="description" content="The HTML5 Herald">
-        <meta name="author" content="Ville Keituri">
-        <meta name="site" content="BellOne">
-        <meta name="keywords" content="jQuery,CSS,HTML,JS,Bootstrap">
-        <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="  sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="css/bandi.css">
-        <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
-        <link rel="icon" href="img/jarijataikalogo.png">
-        <script src="https://sdk.scdn.co/spotify-player.js"></script>
-        <script src="js/index.js"></script>	
-        <script src="js/player.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="row" >
-                <div class="col-12 text-center">
-                    <a href="index.html">
-                        <img id="headerimg" class="img-fluid" src="img/site-header.png">
-                    </a>
-                </div>
-            </div>
-            <nav id="navigationbar" class="navbar navbar-light navbar-expand-md justify-content-center">
-                <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-                    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"></a>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav mx-auto">
-                            <a class="nav-link active" href="#">Etusivu<span class="sr-only">(current)</span></a>
-                            <a class="nav-link active" href="#">Bändi<span class="sr-only">(current)</span></a>
-                            <a class="nav-link active" href="#">Keikat<span class="sr-only">(current)</span></a>
-                            <a class="nav-link disabled" href="#">Disabled</a>
-                        </div>
-                    </div>
-                </nav>
-            </nav>
-        </div>
-        <div class="container">
-            <div class="row m-3 mx-auto">
-                <div class="col-md-12 col-sm-12 col-lg-12 col-xl-12 contentdiv">  
-                    <div class="descbox">
-                    <img class="profilepic" src="img/jaakkonaama.png"/>
-                        <h2 class="profiledesc">Jaakko Heikkilä – Saksofoni</h2>
-                        <p class="profiledesc">Jaakko "Jaska" Heikkilä on toisen polven soittajia, jolle saksofoni on ollut osa elämää aina lapsuudesta lähtien. Jaakko on myös hankkinut soittokokemusta eri tanssiyhtyeistä sekä puhallinorkestereista. Jaakon mieluisin instrumentti on tenorisaksofoni, mutta myös altto ja sopraano soivat hänen käsittelyssään kauniisti.
-                    </p>
-                    </div>
-                    <div class="descbox">
-                    <img class="profilepic" src="img/jarinaama.png"/>
-                        <h2 class="profiledesc">Jari Mustajärvi – Harmonikka, laulu</h2> 
-                        <p class="profiledesc">Yhtyeen puuhamiehenä häärii Jari Mustajärvi, jolle musiikki on ollut rakkain harrastus pikkupojasta lähtien. Jarin pääinstrumentti on harmonikka, mutta myös saksofoni soi välillä. Jari toimii myös laulusolistina useimmissa kappaleissa. </p>
-                    </div>
-                </div>
-            </div>
-        <footer id="stickyfooter">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col-12">
-                        <div>
-                            <h7 id="footertext">Sivut tehnyt:
-                            <a href="https://github.com/VtotheK/">
-                                <img style="max-height:30px" src="img/GitHub-Mark-Light-32px.png">
-                            </a>
-                            </h7>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </body>
+		<title>BellOne - Mainospalvelua</title>
+		<meta name="description" content="The HTML5 Herald">
+		<meta name="author" content="Ville Keituri">
+		<meta name="site" content="BellOne">
+		<meta name="keywords" content="jQuery,CSS,HTML,JS,Bootstrap">
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="  sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/bandi.css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet"> 
+		<link rel="icon" href="img/jarijataikalogo.png">
+		<script src="js/index.js"></script>	
+	</head>
+	<body>
+		<div class="container">
+			<div class="row" >
+				<div class="col-12 text-center">
+					<a href="index.html">
+						<img id="headerimg" class="img-fluid" src="img/site-header.png">
+					</a>
+				</div>
+			</div>
+			<nav id="navigationbar" class="navbar navbar-light navbar-expand-md justify-content-center">
+				<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+					<button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<a class="navbar-brand" href="#"></a>
+					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+						<div class="navbar-nav mx-auto">
+							<a class="nav-link active" href="index.html">Etusivu<span class="sr-only">(current)</span></a>
+							<a class="nav-link active" href="bandi.html">Bändi<span class="sr-only">(current)</span></a>
+							<a class="nav-link active" href="#">Keikat<span class="sr-only">(current)</span></a>
+							<a class="nav-link disabled" href="#">Disabled</a>
+						</div>
+					</div>
+				</nav>
+			</nav>
+		</div>
+		<div class="container">
+			<div class="row m-3 mx-auto">
+				<div class="col-md-12 col-sm-12 col-lg-12 col-xl-12 contentdiv">  
+					<div class="descbox col-12">
+						<img class="profilepic" src="img/jaakkonaama.png"/>
+						<h2 class="profiledesc">Jaakko Heikkilä – Saksofoni</h2>
+						<p class="profiledesc">Jaakko "Jaska" Heikkilä on toisen polven soittajia, jolle saksofoni on ollut osa elämää aina lapsuudesta lähtien. Jaakko on myös hankkinut soittokokemusta eri tanssiyhtyeistä sekä puhallinorkestereista. Jaakon mieluisin instrumentti on tenorisaksofoni, mutta myös altto ja sopraano soivat hänen käsittelyssään kauniisti.
+						</p>
+					</div>
+					<div class="descbox col-12">
+						<img class="profilepic" src="img/jarinaama.png"/>
+						<h2 class="profiledesc">Jari Mustajärvi – Harmonikka, laulu</h2> 
+						<p class="profiledesc">Yhtyeen puuhamiehenä häärii Jari Mustajärvi, jolle musiikki on ollut rakkain harrastus pikkupojasta lähtien. Jarin pääinstrumentti on harmonikka, mutta myös saksofoni soi välillä. Jari toimii myös laulusolistina useimmissa kappaleissa. </p>
+					</div>
+					<div class="descbox col-12">
+						<img class="profilepic" src="img/jukkanaama.png"/>
+						<h2 class="profiledesc">Jukka Kaurila – Bassokitara, laulu, harmonikka</h2> 
+						<p class="profiledesc">Kaurila on monipuolinen muusikko, joka soittaa Taika-yhtyeessä bassoa ja harmonikkaa ja välillä myös rumpuja. Jukka ja Jari tapasivat jo kouluaikoina ja perustivat tuolloin ensimmäisen yhtyeensä, joka soitteli koulun bileissä ym. nuorisotapahtumissa. Sittemmin tiet erkanivat, mutta noin pari vuotta sitten parivaljakko palasi jällleen yhteen. Jukan myötä Taika-yhtyeen musiikkiin on tullut ripaus Beatles vaikutteita, sillä hän on yksi Suomen parhaita Beatles asiantuntijoita.</p>
+					</div>
+					<div class="descbox col-12">
+						<img class="profilepic" src="img/hannunaama.png"/>
+						<h2 class="profiledesc">Hannu Karvia – Rummut</h2> 
+						<p class="profiledesc">Rumpuja Taika-yhtyeessä soittelee Hannu Karvia, joka on pitkän linjan muusikko. Hannu on soitellut monissa eri kokoonpanoissa erilaista musiikkia, pääpainopistealueenaan tanssimusiikki. Hannu Karvia on pitkän linjan muusikko, joka on keikkaillut yhtäjaksoisesti 70-luvulta lähtien jo yli 40 vuotta. Hannun tarkat kompit luovat tukevan pohjan bändin musiikille ja hän maustaa kappaleita juuri sopivaan paikkaan osuvilla filleillä ja breikeillä - ja mikä parasta, Hannu osaa soittaa rumpuja myös hiljaa, mutta kuitenkin svengaavasti!</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<footer id="stickyfooter">
+			<div class="container text-center">
+				<div class="row">
+					<div class="col-12">
+						<div>
+							<h7 id="footertext">Sivut tehnyt:
+							<a href="https://github.com/VtotheK/">
+								<img style="max-height:30px" src="img/GitHub-Mark-Light-32px.png">
+							</a>
+							</h7>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
