--- a/webkehitys/tehtava7/index.html
+++ b/webkehitys/tehtava7/index.html
@@ -24,6 +24,32 @@
 		<script src="js/player.js"></script>
 	</head>
 	<body>
+		<nav class="navbar navbar-dark navbar-expand-lg bg-light sticky-top" id="navigationbar">
+			<a href="" class="navbar-brand">Brand</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="navbar-collapse collapse w-100" id="mainNav">
+				<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="kurwa"/></a>
+				<ul class="navbar-nav w-100 justify-content-center" id="navElements">
+					<li class="nav-item">
+						<a href="#" class="nav-link">Etusivu</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Bändi</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Ohjelmisto</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Galleria</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Yhteystiedot</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 		<div class="container">
 			<div class="row" >
 				<div class="col-12 text-center">
@@ -32,22 +58,7 @@
 					</a>
 				</div>
 			</div>
-			<nav id="navigationbar" class="navbar navbar-light navbar-expand-md justify-content-center">
-				<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-					<button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<a class="navbar-brand" href="#"></a>
-					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-						<div class="navbar-nav mx-auto">
-							<a class="nav-link active" href="#">Etusivu<span class="sr-only">(current)</span></a>
-							<a class="nav-link active" href="bandi.html">Bändi<span class="sr-only">(current)</span></a>
-							<a class="nav-link active" href="#">Keikat<span class="sr-only">(current)</span></a>
-							<a class="nav-link disabled" href="#">Disabled</a>
-						</div>
-					</div>
-				</nav>
-			</nav>
+			
 		</div>
 		<div class="container">
 			<div class="row m-3 mx-auto">
