--- a/webkehitys/tehtava7/index.html
+++ b/webkehitys/tehtava7/index.html
@@ -30,7 +30,7 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="navbar-collapse collapse w-100" id="mainNav">
-				<a href="" class="navbar-brand"><img src="img/jarijataikalogo.png" class="kurwa"/></a>
+
 				<ul class="navbar-nav w-100 justify-content-center" id="navElements">
 					<li class="nav-item">
 						<a href="#" class="nav-link">Etusivu</a>
@@ -41,8 +41,14 @@
 					<li class="nav-item">
 						<a href="#" class="nav-link">Ohjelmisto</a>
 					</li>
+					<li>
+						<a href=""><img src="img/jarijataikalogo.png" class="navbandlogo"/></a>
+					</li>
 					<li class="nav-item">
 						<a href="#" class="nav-link">Galleria</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" class="nav-link">Historia</a>
 					</li>
 					<li class="nav-item">
 						<a href="#" class="nav-link">Yhteystiedot</a>
@@ -63,7 +69,7 @@
 		<div class="container">
 			<div class="row m-3 mx-auto">
 				<div class="col-md-12 col-sm-12 col-lg-12 col-xl-12 contentdiv">  
-					<h4 class="contentdivheader"><img class="navbarimg" src="img/jarijataikalogo.png"/></h4>
+					<h4 class="contentdivheader">Keitä olemme?</h4>
 					Jari ja Taika on täyden palvelun tanssiorkesteri ja viiden mukavan muusikon yhtye, joka tuo vauhtia ja viihdykettä juhliisi. Keikkailemme kaikkialla Etelä- ja Länsi-Suomessa Humppilasta käsin. Laajasta ohjelmistosta löytyvät esimerkiksi ikivihreät jazzklassikot vuosien varrelta, suomipop-suosikit, päivän iskelmät sekä muutama oma sävellyskin. Meillä rytmi on veressä ja yleisön viihdyttäminen sydämen asiana.
 				</div>
 			</div>
@@ -82,7 +88,7 @@
 						<div>
 							<h7 id="footertext">Sivut tehnyt:
 							<a href="https://github.com/VtotheK/">
-								<img style="max-height:30px" src="img/GitHub-Mark-Light-32px.png">
+								<img style="max-height:30px" src="img/GitHub-Mark-32px.png">
 							</a>
 							</h7>
 						</div>
