--- a/webkehitys/tehtava7/yhteystiedot.html
+++ b/webkehitys/tehtava7/yhteystiedot.html
@@ -58,7 +58,14 @@
 				<div class="col-12">
 					<form name="contactForm" id="contactFormId">
 						<div class="form-group contentdiv" id="formcontent">
-							<h3 style="text-align: center">Ota yhteyttä</h3>
+							<h1 style="text-align: center">Ota yhteyttä</h1>
+							<div class="row">
+								<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 col-xl-12" style="text-align:center;">
+									<h3>Soita: 040 8293710</h3>
+									<h3>TAI</h3>
+									<h4>Ota yhteyttä lomakkeella</h4>
+								</div>
+							</div>
 								<div class="row">
 									<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 col-xl-6">
 										<label class="contactFormLabels" for="contactFormName">Nimi</label>
